[project]
name = "medical_analyzer"
version = "0.1.0"
description = "medical-analyzer using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.141.0,<1.0.0"
]

[project.scripts]
medical_analyzer = "medical_analyzer.main:run"
run_crew = "medical_analyzer.main:run"
train = "medical_analyzer.main:train"
replay = "medical_analyzer.main:replay"
test = "medical_analyzer.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
